@@ -1,7 +1,7 @@
 // Copyright 2002-2012, University of Colorado
 
 /**
- * Dimension (size) 2D.
+ * 2D dimension.
  *
  * @author Chris Malley (PixelZoom, Inc.)
  */
@@ -13,10 +13,15 @@ define( [],
              * @param {Number} width
              * @param {Number} height
              */
-            function Dimension( width, height ) {
+            function Dimension2D( width, height ) {
                 this.width = width;
                 this.height = height;
             }
 
-            return Dimension;
+             // @return {String}
+            Dimension2D.prototype.toString = function () {
+                return "[Dimension2D (width=" + this.width + " height=" + this.height + ")]";
+            };
+
+            return Dimension2D;
         } );
